--- a/cleint/index.html
+++ b/cleint/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://media.licdn.com/dms/image/v2/D4D35AQEl3A-oq-zUug/profile-framedphoto-shrink_400_400/profile-framedphoto-shrink_400_400/0/1693739139776?e=1728421200&v=beta&t=-ynCHSs5xj9nhGjo7tqhu1EvD0S4NA0UWEMOkebuBBo"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>mohammed kal</title>
   </head>
   <body>
     <div id="root"></div>
